{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 182,
  "lineage": "41644737-76db-cbd1-b86a-d2d5560dda80",
  "resources": [
    {
      "module": "module.Terraform_linux_instance",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "my_terraform_nic",
      "provider": "module.Terraform_linux_instance.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "tvm1",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/24aec7d3-4d2b-4477-bf63-4badc43041db/resourceGroups/terraformrg/providers/Microsoft.Network/networkInterfaces/my-nic-tvm1",
            "internal_domain_name_suffix": "1jp4g0myyjle3hb0ugzx3yc0ja.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "my_nic_configuration",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/24aec7d3-4d2b-4477-bf63-4badc43041db/resourceGroups/terraformrg/providers/Microsoft.Network/publicIPAddresses/myPublicIP-tvm1",
                "subnet_id": "/subscriptions/24aec7d3-4d2b-4477-bf63-4badc43041db/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/terraform_vnet/subnets/terraform_subnet"
              }
            ],
            "location": "westus",
            "mac_address": "60-45-BD-07-0F-3B",
            "name": "my-nic-tvm1",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "terraformrg",
            "virtual_machine_id": "/subscriptions/24aec7d3-4d2b-4477-bf63-4badc43041db/resourceGroups/terraformrg/providers/Microsoft.Compute/virtualMachines/vm-tvm1"
          },
          "dependencies": [
            "module.Terraform_linux_instance.azurerm_public_ip.my_terraform_public_ip",
            "module.Terraform_linux_network.azurerm_resource_group.rg",
            "module.Terraform_linux_network.azurerm_subnet.my_terraform_subnet",
            "module.Terraform_linux_network.azurerm_virtual_network.my_terraform_network"
          ]
        },
        {
          "index_key": "tvm2",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/24aec7d3-4d2b-4477-bf63-4badc43041db/resourceGroups/terraformrg/providers/Microsoft.Network/networkInterfaces/my-nic-tvm2",
            "internal_domain_name_suffix": "1jp4g0myyjle3hb0ugzx3yc0ja.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "my_nic_configuration",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/24aec7d3-4d2b-4477-bf63-4badc43041db/resourceGroups/terraformrg/providers/Microsoft.Network/publicIPAddresses/myPublicIP-tvm2",
                "subnet_id": "/subscriptions/24aec7d3-4d2b-4477-bf63-4badc43041db/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/terraform_vnet/subnets/terraform_subnet"
              }
            ],
            "location": "westus",
            "mac_address": "00-0D-3A-5D-47-D4",
            "name": "my-nic-tvm2",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "terraformrg",
            "virtual_machine_id": "/subscriptions/24aec7d3-4d2b-4477-bf63-4badc43041db/resourceGroups/terraformrg/providers/Microsoft.Compute/virtualMachines/vm-tvm2"
          },
          "dependencies": [
            "module.Terraform_linux_instance.azurerm_public_ip.my_terraform_public_ip",
            "module.Terraform_linux_network.azurerm_resource_group.rg",
            "module.Terraform_linux_network.azurerm_subnet.my_terraform_subnet",
            "module.Terraform_linux_network.azurerm_virtual_network.my_terraform_network"
          ]
        },
        {
          "index_key": "tvm3",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/24aec7d3-4d2b-4477-bf63-4badc43041db/resourceGroups/terraformrg/providers/Microsoft.Network/networkInterfaces/my-nic-tvm3",
            "internal_domain_name_suffix": "1jp4g0myyjle3hb0ugzx3yc0ja.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "my_nic_configuration",
                "primary": true,
                "private_ip_address": "10.0.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/24aec7d3-4d2b-4477-bf63-4badc43041db/resourceGroups/terraformrg/providers/Microsoft.Network/publicIPAddresses/myPublicIP-tvm3",
                "subnet_id": "/subscriptions/24aec7d3-4d2b-4477-bf63-4badc43041db/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/terraform_vnet/subnets/terraform_subnet"
              }
            ],
            "location": "westus",
            "mac_address": "00-0D-3A-37-20-47",
            "name": "my-nic-tvm3",
            "private_ip_address": "10.0.1.6",
            "private_ip_addresses": [
              "10.0.1.6"
            ],
            "resource_group_name": "terraformrg",
            "virtual_machine_id": "/subscriptions/24aec7d3-4d2b-4477-bf63-4badc43041db/resourceGroups/terraformrg/providers/Microsoft.Compute/virtualMachines/vm-tvm3"
          },
          "dependencies": [
            "module.Terraform_linux_instance.azurerm_public_ip.my_terraform_public_ip",
            "module.Terraform_linux_network.azurerm_resource_group.rg",
            "module.Terraform_linux_network.azurerm_subnet.my_terraform_subnet",
            "module.Terraform_linux_network.azurerm_virtual_network.my_terraform_network"
          ]
        }
      ]
    },
    {
      "module": "module.Terraform_linux_instance",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "my_terraform_public_ip",
      "provider": "module.Terraform_linux_instance.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "tvm1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/24aec7d3-4d2b-4477-bf63-4badc43041db/resourceGroups/terraformrg/providers/Microsoft.Network/publicIPAddresses/myPublicIP-tvm1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "137.135.41.203",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "myPublicIP-tvm1",
            "resource_group_name": "terraformrg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "production"
            }
          }
        },
        {
          "index_key": "tvm2",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/24aec7d3-4d2b-4477-bf63-4badc43041db/resourceGroups/terraformrg/providers/Microsoft.Network/publicIPAddresses/myPublicIP-tvm2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.40.12.166",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "myPublicIP-tvm2",
            "resource_group_name": "terraformrg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "production"
            }
          }
        },
        {
          "index_key": "tvm3",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/24aec7d3-4d2b-4477-bf63-4badc43041db/resourceGroups/terraformrg/providers/Microsoft.Network/publicIPAddresses/myPublicIP-tvm3",
            "idle_timeout_in_minutes": 4,
            "ip_address": "137.135.46.164",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "myPublicIP-tvm3",
            "resource_group_name": "terraformrg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "production"
            }
          }
        }
      ]
    },
    {
      "module": "module.Terraform_linux_network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "my_terraform_nsg",
      "provider": "module.Terraform_linux_network.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/24aec7d3-4d2b-4477-bf63-4badc43041db/resourceGroups/terraformrg/providers/Microsoft.Network/networkSecurityGroups/terraformnsg",
            "location": "westus",
            "name": "terraformnsg",
            "resource_group_name": "terraformrg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Terraform_linux_network.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.Terraform_linux_network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "module.Terraform_linux_network.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/24aec7d3-4d2b-4477-bf63-4badc43041db/resourceGroups/terraformrg/providers/Microsoft.Network/networkSecurityGroups/terraformnsg/securityRules/AllowSSH",
            "name": "AllowSSH",
            "network_security_group_name": "terraformnsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "terraformrg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Terraform_linux_network.azurerm_network_security_group.my_terraform_nsg",
            "module.Terraform_linux_network.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.Terraform_linux_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "my_terraform_subnet",
      "provider": "module.Terraform_linux_network.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/24aec7d3-4d2b-4477-bf63-4badc43041db/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/terraform_vnet/subnets/terraform_subnet",
            "name": "terraform_subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "terraformrg",
            "virtual_network_name": "terraform_vnet"
          },
          "dependencies": [
            "module.Terraform_linux_network.azurerm_resource_group.rg",
            "module.Terraform_linux_network.azurerm_virtual_network.my_terraform_network"
          ]
        }
      ]
    },
    {
      "module": "module.Terraform_linux_network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "my_terraform_network",
      "provider": "module.Terraform_linux_network.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "69e35fda-c298-4e56-9c3a-a1b37ee05a48",
            "id": "/subscriptions/24aec7d3-4d2b-4477-bf63-4badc43041db/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/terraform_vnet",
            "location": "westus",
            "name": "terraform_vnet",
            "resource_group_name": "terraformrg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/24aec7d3-4d2b-4477-bf63-4badc43041db/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/terraform_vnet/subnets/terraform_subnet",
                "name": "terraform_subnet"
              }
            ]
          },
          "dependencies": [
            "module.Terraform_linux_network.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}